--- a/src/styles/icomoon/style.css
+++ b/src/styles/icomoon/style.css
@@ -2,7 +2,7 @@
   font-family: 'icomoon';
   src:  url('icomoon/fonts/icomoon.eot?7cay7f');
   src:  url('icomoon/fonts/icomoon.eot?7cay7f#iefix') format('embedded-opentype'),
-    url('icomoon/fonts/icomoon.ttf?7cay7f') format('truetype'),
+    /* url('icomoon/fonts/icomoon.ttf?7cay7f') format('truetype'), */
     url('icomoon/fonts/icomoon.woff?7cay7f') format('woff'),
     url('icomoon/fonts/icomoon.svg?7cay7f#icomoon') format('svg');
   font-weight: normal;
